tag chicago lc item types

--- a/src/app/content/chicago/ashland.mdx
+++ b/src/app/content/chicago/ashland.mdx
@@ -17,7 +17,7 @@ stickers: [{image: "/loc/chicago/ashland/rockIsland.png", linkOut: "https://www.
 
 Chicago’s transit system is very notable - it is one of only 3 cities in the world to offer 24-hour service on parts of it lines, it is the second oldest system in the United States, and has the longest subway platform in the world. This network of rails took a long time to come together, and started in 1888.
 
-<LOCItem image="/loc/chicago/ashland/l.png" linkOut="https://www.loc.gov/resource/g4104c.ct003152/?r=-0.097,-0.135,1.111,0.779,0"/>
+<LOCItem type="map" caption="1908 Birds-eye view of the elevated railroads and the parks and boulevards of Chicago" image="/loc/chicago/ashland/l.png" linkOut="https://www.loc.gov/resource/g4104c.ct003152/?r=-0.097,-0.135,1.111,0.779,0"/>
 
 With the city rapidly growing in population and ground footage, the need for convenient transportation also grew. Up until the 1880s, Chicago’s street railways were “nearly all animal power”, and it was clear that some more permanent infrastructure would be necessary.
 
@@ -25,7 +25,7 @@ However, the logistics to obtaining permission to build the tracks was extremely
 
 Following a year later was the Lake Street “L” which ran from 52nd Avenue to Market & Madison and eventually became a part of the Green Line.
 
-<LOCItem image="/loc/chicago/ashland/lake.jpg" linkOut="https://www.loc.gov/resource/hhh.il0376.photos/?sp=1&st=image"/>
+<LOCItem type="pnp" caption="View of abandoned Pulsaki Tower, part of the Lake Street Elevated Railway" image="/loc/chicago/ashland/lake.jpg" linkOut="https://www.loc.gov/resource/hhh.il0376.photos/?sp=1&st=image"/>
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {src:"Charles Yerkes was the man behind *most* of Chicago’s rapid transit development.", type:"text", position:{col:1, row:1}, size:{width:9, height:2}, style:{outline:"box",fontSize:"1rem", backgroundColor: "white"}},
@@ -47,8 +47,8 @@ Following a year later was the Lake Street “L” which ran from 52nd Avenue to
 
 Northwestern Elevated Railroad Company was also built under Yerkes, and the Union Loop, which finally connected the lines into the heart of the city, was Yerkes’ as well.
 
-<LOCItem image="/loc/chicago/ashland/cs.jpg" linkOut="https://www.loc.gov/resource/hhh.il0387.sheet/?sp=3&st=image"/>
-<LOCItem image="/loc/chicago/ashland/tracks.jpg" linkOut="https://www.loc.gov/resource/hhh.il0387.photos/?sp=2"/>
+<LOCItem type="pnp" caption="Partial plan of the Randolph-Wells Street Station" image="/loc/chicago/ashland/cs.jpg" linkOut="https://www.loc.gov/resource/hhh.il0387.sheet/?sp=3&st=image"/>
+<LOCItem type="pnp" caption="Randolph Street Station Lake Street-Fifth Avenue Station" image="/loc/chicago/ashland/tracks.jpg" linkOut="https://www.loc.gov/resource/hhh.il0387.photos/?sp=2"/>
 
 Having so many individual companies was not sustainable, so in 1924, they were all consolidated into the Chicago Rapid Transit Company (another private company). It wasn’t until the 1940s that the CTA took over all the lines to become municipally owned.
 
