--- a/src/app/content/chicago/canal.mdx
+++ b/src/app/content/chicago/canal.mdx
@@ -28,13 +28,13 @@ Chicago is no different - in the 1830s, a huge project began to build the Illino
 ]}/>
 
 
-<LOCItem image="/loc/chicago/canal/lincoln.jpg" linkOut="https://www.loc.gov/resource/mal.1512100/?sp=1&q=illinois+and+michigan+canal&st=text&r=-0.345,-0.398,1.691,2.318,0"/>
+<LOCItem type="manuscript" caption="Resolution recommending enlargement of Illinois and Michigan Canal from the Abraham Lincoln papers" image="/loc/chicago/canal/lincoln.jpg" linkOut="https://www.loc.gov/resource/mal.1512100/?sp=1&q=illinois+and+michigan+canal&st=text&r=-0.345,-0.398,1.691,2.318,0"/>
 
 However, the water that you see here today isn’t the I&M Canal. In the late 1800s, Chicago was facing a crisis - its water supply was unreliable. With both sewage and pollution from rebuilding the city after the Great Fire all finding its way into the Chicago River which fed into Lake Michigan, the city was concerned that the water was unusable for drinking.
 
 Thus began one of the wildest engineering projects in the history of the country. The state of Illinois decided to construct the Chicago Sanitary and Ship Canal to replace parts of the I&M, which, in addition to widening and deepening the previous canal, reversed the flow of the Chicago River.
 
-<LOCItem image="/loc/chicago/canal/cssc.jpg" linkOut="https://www.loc.gov/resource/hhh.il0976.sheet/?sp=1&st=image"/>
+<LOCItem type="pnp" caption="Diagram showing how the canal's creation reversed the direction of the flow of water of the Chicago River out of Lake Michigan." image="/loc/chicago/canal/cssc.jpg" linkOut="https://www.loc.gov/resource/hhh.il0976.sheet/?sp=1&st=image"/>
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"To create the space for the canal, forty-million cubic yards of dirt were excavated.", position:{col:1, row:1}, size:{width:8, height:2}, style:{outline:"box",backgroundColor: "white"}},
@@ -51,7 +51,7 @@ Thus began one of the wildest engineering projects in the history of the country
 
 The decision to reverse the river was controversial, even back then. Because the main point was to dilute the sewage by having it flow through a larger volume of water, people downstream suffered the consequences, including the city of St. Louis, who sued Chicago to reverse the flow.
 
-<LOCItem image="/loc/chicago/canal/newspaper.jpg" linkOut="https://www.loc.gov/resource/sn92067031/1895-03-21/ed-1/?sp=8&q=chicago+drainage+canal&r=0.193,0.49,0.598,0.41,0"/>
+<LOCItem type="newspaper" caption="Clip from newspaper showing the path of the Great Drainage Canal" image="/loc/chicago/canal/newspaper.jpg" linkOut="https://www.loc.gov/resource/sn92067031/1895-03-21/ed-1/?sp=8&q=chicago+drainage+canal&r=0.193,0.49,0.598,0.41,0"/>
 
 The canal is still used for barge traffic. You can see to the north the wide turning basin where ships used to rotate themselves, and just above that is where the Chicago River meets the mouth of the canal.
 
