--- a/src/app/content/chicago/cpl.mdx
+++ b/src/app/content/chicago/cpl.mdx
@@ -15,7 +15,7 @@ blurb: ""
 stickers: [{image: "/loc/chicago/cpl/s.png", linkOut: "https://www.loc.gov/resource/g4104cm.g01790190601S/?sp=31&st=image&r=0.796,0.179,0.203,0.139,0"},{image: "/loc/chicago/cpl/postcard.png", linkOut: "https://www.loc.gov/resource/pcrd.1a03874/"}, {image: "/loc/chicago/cpl/poster.png", title: "Hull-House community workshop", linkOut: "https://www.loc.gov/item/98513471/"}, {image: "/loc/chicago/cpl/staircase.jpg", linkOut: "https://www.loc.gov/resource/stereo.1s12353/"}, {image: "/loc/chicago/cpl/cplSticker.png", linkOut: "https://www.loc.gov/resource/pcrd.1a03991/"}]
 ---
 
-<LOCItem image="/loc/chicago/cpl/stereograph.jpg" linkOut="https://www.loc.gov/resource/stereo.1s41365/"/>
+<LOCItem caption="Stereograph of the Chicago fire ruins." type="pnp" image="/loc/chicago/cpl/stereograph.jpg" linkOut="https://www.loc.gov/resource/stereo.1s41365/"/>
 
 The Chicago Public Library was born out of the ruins of the Great Fire. Before the fire, there had only been private libraries, and it was through the inspiration of two Englishmen who had the idea and drive to collect over 8,000 books to send to the city as an act of “brotherly kindness”.
 
@@ -55,7 +55,7 @@ Some of the other building requirements included:
 - It should be built of stone -- either granite or Bedford bluestone -- and not of steel and brick
 - The exterior should make it clear that it is a library
 - The rooms should be built with independent fireproof sections.
-<LOCItem image="/loc/chicago/cpl/sanborn.jpg" caption="Insurance map showing the fireproof library." linkOut="https://www.loc.gov/resource/g4104cm.g01790190601S/?sp=31&st=image&r=0.423,0.192,0.594,0.416,0"/>
+<LOCItem type="pnp" image="/loc/chicago/cpl/sanborn.jpg" caption="Insurance map showing the fireproof library." linkOut="https://www.loc.gov/resource/g4104cm.g01790190601S/?sp=31&st=image&r=0.423,0.192,0.594,0.416,0"/>
 - And all of this should cost no more than $1,200,000
 
 The contract was awarded to the Shepley, Rutan and Coolidge firm, who also designed the nearby Art Institute.
@@ -63,12 +63,12 @@ The contract was awarded to the Shepley, Rutan and Coolidge firm, who also desig
 
 Every detail that could be thought out was -- including the mural that appears above the southern stairs. This mural is a mosaic made of pieces of glass, mother of pearl and shells, and stones are laid into marble. The choice of mosaic over a painted mural was because of the nearby railyards, whose smoke would have damaged paint.
 
-<LOCItem image="/loc/chicago/cpl/mural.jpg" linkOut="https://www.loc.gov/resource/hhh.il0100.photos/?sp=3"/>
-<LOCItem image="/loc/chicago/cpl/pano.jpg" caption="Birds-eye view of Chicago showing the nearby railyards" linkOut="https://www.loc.gov/resource/g4104c.pm001550/?r=0.532,0.282,0.407,0.285,0"/>
+<LOCItem type="pnp" caption="Photograph showing the mosaics above the south staircase in the previous Chicago main library" image="/loc/chicago/cpl/mural.jpg" linkOut="https://www.loc.gov/resource/hhh.il0100.photos/?sp=3"/>
+<LOCItem type="map" image="/loc/chicago/cpl/pano.jpg" caption="Birds-eye view of Chicago showing the nearby railyards" linkOut="https://www.loc.gov/resource/g4104c.pm001550/?r=0.532,0.282,0.407,0.285,0"/>
 
 However, this building is no longer the home to the Chicago Public Library -- in the 60s, library technologies had evolved librarians found that the building wasn't convinient anymore. It was clear that a new building was needed. In 1981, Mayor Harold Washington approved the budget to build the new central library on a one-and-a-half block lot. 
 
-<LOCItem image="/loc/chicago/cpl/carol.jpg" caption="Photographs in the Carol M. Highsmith Archive, Library of Congress, Prints and Photographs Division.
+<LOCItem type="pnp" image="/loc/chicago/cpl/carol.jpg" caption="Photographs in the Carol M. Highsmith Archive, Library of Congress, Prints and Photographs Division.
 " linkOut="https://www.loc.gov/resource/highsm.16300/?r=-0.107,-0.031,1.215,0.836,0"/>
 
 Today, the Chicago Public Library has over 5 million books, 81 locations, and in the last year issued over 160,000 new library cards. Its seal incorporates the city of Chicago “municipal device” which represents the north, south, and main branch of the Chicago River.
