--- a/src/app/content/chicago/garfieldPark.mdx
+++ b/src/app/content/chicago/garfieldPark.mdx
@@ -19,11 +19,11 @@ When it first opened in 1874, Garfield Park was originally known as Chicago’s 
 
 In 1905, the new West Park System superintendent, Jens Jensen, started to redesign and reenvision the park. At this point, the park had quadrupled in size -- from 40 acres to over 180. A part of this overhaul was to rethink the conservatories in the various parks in his jurisdiction -- in an effort to consolidate three typical plant conservatories into a monumental one, he demolished the existing buildings in Garfield,  Humboldt, and Douglass Park and built a new one in Garfield. 
 
-<LOCItem image="/loc/chicago/garfieldPark/conservatory.jpg" linkOut="https://www.loc.gov/resource/stereo.1s12470/"/>
+<LOCItem type="pnp" image="/loc/chicago/garfieldPark/conservatory.jpg" linkOut="https://www.loc.gov/resource/stereo.1s12470/"/>
 
 Known as one of the largest conservatories in the entire country, Garfield’s new conservatory had many plants from the three smaller conservatories it had absorbed. The building itself was magnificent -- the large silhouette cast by the Palm Room was designed to evoke a haystack. Each room of the conservatory is capped by a different type of roof -- the Fern Room sitting behind the Palm has a gable roof.
 
-<LOCItem image="/loc/chicago/garfieldPark/greenhouse.png" linkOut="https://www.loc.gov/resource/gdcmassbookdig.onehundredtwenty01rand/?sp=126&q=garfield+park&r=0,-0.029,1,0.743,0"/>
+<LOCItem type="book" image="/loc/chicago/garfieldPark/greenhouse.png" linkOut="https://www.loc.gov/resource/gdcmassbookdig.onehundredtwenty01rand/?sp=126&q=garfield+park&r=0,-0.029,1,0.743,0"/>
 Most importantly in the conservatory are the plants. Jensen’s plan for the landscape design diverged from typical conservatories at the time -- instead of plants sitting in individual pots, he wanted each room to feel like a natural, beautiful scene.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
@@ -59,7 +59,7 @@ Most importantly in the conservatory are the plants. Jensen’s plan for the lan
 
 The Garfield Park Conservatory, like the park it resides within, has adapted to serve its neighborhood and grown to what it needs of a city green space. In addition to being a space for plants and plant lovers, the Conservatory hosts plant shows and art exhibits and offers many events for the community. 
 
-<LOCItem image="/loc/chicago/garfieldPark/mum.jpg" linkOut="https://www.loc.gov/resource/cph.3f05570/"/>
+<LOCItem type="pnp" image="/loc/chicago/garfieldPark/mum.jpg" linkOut="https://www.loc.gov/item/98518256/"/>
 
 {/* 
 Sticker template: 
