--- a/src/app/content/chicago/graceland.mdx
+++ b/src/app/content/chicago/graceland.mdx
@@ -1,7 +1,7 @@
 ---
 title: After Death Architecture Tour
 locationTitle: Graceland Cemetery
-address:
+address: 4001 N Clark St
 location: ["Chicago"] 
 latlon: [41.9547, -87.6618]
 neighborhood: Sheridan
@@ -24,7 +24,7 @@ Graceland is also a center for architecture -- both in the people buried there, 
 ]}/>
 
 
-<LOCItem image="/loc/chicago/graceland/ryerson.jpg" linkOut="https://www.loc.gov/resource/hhh.il0942.sheet/?sp=2"/>
+<LOCItem type="pnp" image="/loc/chicago/graceland/ryerson.jpg" linkOut="https://www.loc.gov/resource/hhh.il0942.sheet/?sp=2"/>
 # 1. The Ryerson Tomb
 The first stop houses Martin L. Ryerson, a lumber businessman. When he died, his son, Martin A. Ryerson, hired Louis Sullivan to design his father’s tomb.
 <ComicSection cols={9} rowHeight="2rem" elements={[
@@ -41,19 +41,19 @@ Louis Sullivan, known as the “father of skyscrapers” and part of the “trin
 
 This tomb is one of few examples of Egyptian Revival style still in the US, and is notable in its lack of Egyptian motifs on its exterior -- with a floral design attached to its gate.
 
-<LOCItem image="/loc/chicago/graceland/honore.jpg" linkOut="https://www.loc.gov/resource/hhh.il0941.sheet/?sp=2"/>
+<LOCItem type="pnp" image="/loc/chicago/graceland/honore.jpg" linkOut="https://www.loc.gov/resource/hhh.il0941.sheet/?sp=2"/>
 # 2. The Honore Tomb
 This second tomb, just north of the Ryerson Tomb, holds Henry Hamilton Honore, known for founding the Chicago Park District.
 
 It was designed by one of the largest architecture firms in the United States of the time, McKim, Mead & White, who also created the Metropolitan Museum of Art in New York City, the Boston Public Library building, and the English Building at the University of Illinois Urbana-Champaign campus.
 
-<LOCItem image="/loc/chicago/graceland/hhHonore.jpg" linkOut="https://www.loc.gov/resource/sn86058226/1916-08-17/ed-1/?sp=8&q=honore&r=0.026,1.061,0.396,0.275,0"/>
+<LOCItem type="newspaper" image="/loc/chicago/graceland/hhHonore.jpg" linkOut="https://www.loc.gov/resource/sn86058226/1916-08-17/ed-1/?sp=8&q=honore&r=0.026,1.061,0.396,0.275,0"/>
 
 This tomb is styled in the French High Gothic Revival tradition, similar to the ornate churches that can be found in France, with extremely ornate stonework. The Smithsonian recognizes it as one of American’s most “significant sculptural works”.
 
 Five sarcophagi sit on the pedestal, and both Henry and his wife Eliza rest there. Of their six children, three were entombed with them: Lockwood, Nathanial, and Adrian. 
 
-<LOCItem image="/loc/chicago/graceland/getty.jpg" linkOut="https://www.loc.gov/resource/hhh.il0120.sheet/?sp=1"/>
+<LOCItem type="pnp" image="/loc/chicago/graceland/getty.jpg" linkOut="https://www.loc.gov/resource/hhh.il0120.sheet/?sp=1"/>
 # 3. The Getty Tomb
 This tomb is the second of three mausoleums that Louis Sullivan designed in his career: the last is in St. Louis. It was commissioned by Henry Getty for his wife, Eliza, as Getty was business partners with Ryerson and like what Sullivan did for his tomb.
 
