--- a/src/app/content/chicago/hullHouse.mdx
+++ b/src/app/content/chicago/hullHouse.mdx
@@ -15,11 +15,11 @@ blurb:
 stickers: [{image: "/loc/chicago/hullHouse/postCard.jpg", linkOut: "https://www.loc.gov/resource/pcrd.1a03955/"},{image: "/loc/chicago/hullHouse/workshop.png", linkOut: "https://www.loc.gov/resource/cph.3f05215/"}, {image: "/loc/chicago/hullHouse/library.png",title: "photo of Hull House library, excerpt from book" , linkOut: "https://www.loc.gov/resource/gdclccn.2006700092/?sp=7&r=-0.687,-0.073,2.375,1.634,0"}]
 ---
 
-<LOCItem image="/loc/chicago/hullHouse/postCard.jpg" linkOut="https://www.loc.gov/resource/pcrd.1a03955/"/>
+<LOCItem type="pnp" image="/loc/chicago/hullHouse/postCard.jpg" linkOut="https://www.loc.gov/resource/pcrd.1a03955/"/>
 
 Hull House was a settlement house founded by Jane Addams and Ellen Gates Starr in 1889. It started as a space for college-educated women to provide free classes to the local working class residents, many of them recent immigrants. Their subjects were mostly cultural, with classes such as history, art, literature, sewing, and domestic activities. 
 
-<LOCItem image="/loc/chicago/hullHouse/postershow.jpg" linkOut="https://www.loc.gov/resource/cph.3b48753/"/>
+<LOCItem type="pnp" caption="Poster for Illinois Art Project poster show in 1936" image="/loc/chicago/hullHouse/postershow.jpg" linkOut="https://www.loc.gov/resource/cph.3b48753/"/>
 
 Over time, the scale of Hull House grew. Jane Addams believed that theater was important for community, and founded a theater group that would perform in the community’s local language. They also expanded to offer more services to help people affected by poverty, such as daycare, food, and public baths. And over time, seeing that things needed to change at a legislative level, member of Hull House started to advocate for labor rights, immigrant rights, child labor laws, and occupational safety.
 
