--- a/src/app/content/chicago/lincolnPark.mdx
+++ b/src/app/content/chicago/lincolnPark.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sculptures? Check.
+title: The outdoor Statuary Hall of Chicago
 locationTitle: Lincoln Park Chess Pavilion
 address: Lakefront Trail
 location: ["Chicago"] 
@@ -17,7 +17,7 @@ stickers: [{image: "/loc/chicago/lincolnPark/sculptures.png", title: "King and Q
 
 All the way over in Washington DC is the National Statuary Hall - with two statues for each state, over 100 statues stand representing some of the most notable people in American history. But much closer to home, Lincoln Park is known as Chicago’s outdoor Statuary Hall. With so many other fun things to do, it’s easier to overlook these stationary figures. However, learning some of the stories behind them make it more fun to stop and look around!
 
-<LOCItem image="/loc/chicago/lincolnPark/es.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.documentsconcern00tafe/?sp=14&r=-0.834,-0.524,2.667,1.835,0"/>
+<LOCItem type="book" image="/loc/chicago/lincolnPark/es.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.documentsconcern00tafe/?sp=14&r=-0.834,-0.524,2.667,1.835,0"/>
 # Emanuel Swedenborg Monument
 
 A bust of the Swedish scientist happened to find itself in this city, though he had nothing to do with Chicago. Created by Swedish sculptor Adolf Johnson, it was originally owned by  Dr. Minnie Ridgeway Bishop and Louis Bracket Bishop who offered to donate it to the park. A granite base was created to hold the new addition, and it stood there from 1924 until 1976, when it was stolen.
@@ -37,22 +37,22 @@ A bust of the Swedish scientist happened to find itself in this city, though he 
 
 The pyramid was left until 2009 when a car accident destroyed the granite base. It was at this time that Chicago Park District discovered that the model for the original bust still existed, and commissioned sculptor Magnus Persson to replace the whole monument.
 
-<LOCItem image="/loc/chicago/lincolnPark/ef.jpg" linkOut="https://www.loc.gov/resource/stereo.1s12527/"/>
+<LOCItem image="/loc/chicago/lincolnPark/ef.jpg" type="pnp" linkOut="https://www.loc.gov/resource/stereo.1s12527/"/>
 # Dream Lady - Eugene Field Memorial
 
 Eugene Field, born in St. Louis and later a Chicago resident, was a writer. He contributed to newspapers like the Chicago Daily with articles in a light-hearted tone about things happening around town. eventually known for his poems for children. When he died in 1895, he was considered the United State’s children’s poet laureate.
 
 To raise funds for the memorial, schoolchildren donated their pocket money. The memorial has a lot of imagery referring to Field’s work, and excerpts from his poems on both sides of the base. Designed by architects Delano & Aldrich and sculptor Edward Francis McCarten, the Dream Lady floats about the sleeping children with a fistful of poppies.
 
-<LOCItem image="/loc/chicago/lincolnPark/fieldFlowers.jpg" linkOut="https://www.loc.gov/resource/ppmsca.42198/"/>
-<LOCItem caption="" image="/loc/chicago/lincolnPark/spt.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.poemsofeugenefi00fiel/?sp=233&st=image&r=-0.456,0.154,1.825,1.279,0"/>
+<LOCItem type="pnp" caption="Field flowers by Eugene Field, printed to raise funds for his monument." image="/loc/chicago/lincolnPark/fieldFlowers.jpg" linkOut="https://www.loc.gov/resource/ppmsca.42198/"/>
+<LOCItem type="book" caption="Beginning of Eugene Field's poem The Sugar-Plum Tree which is carved into the right side of the monument." image="/loc/chicago/lincolnPark/spt.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.poemsofeugenefi00fiel/?sp=233&st=image&r=-0.456,0.154,1.825,1.279,0"/>
 
 <LOCItem image="/loc/chicago/lincolnPark/skating.png" linkOut="https://www.loc.gov/resource/highsm.18149/"/>
 # Chess Pavilion
 
 The Chess Pavilion might not look like a typical sculpture -- with three tiers and 20 embedded chess boards, it is useful as a space where people can gather. Throughout the pavilion, however, are sculptural elements -- the detailed bas-relief carvings of chess pieces, incised carvings, and two five-foot tall sculptures we created by sculptor Boris Gilbertson.
 
-<LOCItem image="/loc/chicago/lincolnPark/chess.jpg" linkOut="https://www.loc.gov/resource/hhh.il1022.sheet"/>
+<LOCItem type="pnp" caption="Roller skater passes the Chess Pavilion from the Carol M. Highsmith collection" image="/loc/chicago/lincolnPark/chess.jpg" linkOut="https://www.loc.gov/resource/hhh.il1022.sheet"/>
 
 {/* 
 Sticker template: 
