--- a/src/app/content/chicago/muddyWaters.mdx
+++ b/src/app/content/chicago/muddyWaters.mdx
@@ -1,5 +1,5 @@
 ---
-title: It's Electric
+title: The father of modern Chicago Blues
 locationTitle: Muddy Waters Home
 address: 4339 S Lake Park Ave, Chicago, IL 60653
 location: ["Chicago"] 
@@ -10,8 +10,8 @@ tags: [""]
 cameraImage: "/loc/chicago/muddyWaters/lomax.jpg"
 cardImage: "/loc/chicago/muddyWaters/lomax.jpg"
 stampName: "/illustrations/chicagoGreen.png"
-photoPrompt: VVN TODO
-blurb: VVN TODO
+photoPrompt: 
+blurb:
 stickers: [{image: "/loc/chicago/muddyWaters/burr.jpg", title: "Burr Clover Blues card catalog, recording of Muddy Waters taken by Alan Lomax",linkOut: "https://www.loc.gov/item/afc9999005.18892/"},{image: "/loc/chicago/muddyWaters/record.png", title: "Chicago bound blues sung by Bessie Smith", linkOut: "https://www.loc.gov/resource/jukebox-672304.1?r=-0.301,-0.073,1.615,1.111,0"}]
 ---
 
@@ -25,9 +25,8 @@ Muddy Waters grew up in the Mississippi Delta and started playing the guitar at 
     {type:"text", src:"Oh. I sound like all the other people on records.", position:{col:6, row:15}, size:{width:3, height:2}, style:{outline:"bubble"}},
     {type:"image", src:"/loc/chicago/muddyWaters/r2.jpg", position:{col:3, row:11}, size:{width:6, height:8}},
 ]}/>
-<LOCItem image="/loc/chicago/muddyWaters/lomax.jpg" captions="Notes from Alan Lomax when meeting with Muddy Waters. He notes that Muddy Waters can tune his guitar in three ways - Natural, Spanish, and E minor, his favorite song is 'I Be's Troubled', and he owns a Victrola." linkOut="https://www.loc.gov/resource/afc2004004.ms070208/?sp=18"/>
-<LOCItem image="/loc/chicago/muddyWaters/burr.jpg" caption="card catalog image" linkOut="https://www.loc.gov/item/afc9999005.34566/"/>
-<LOCItem image="/loc/chicago/muddyWaters/i.jpg" caption="Card catalog image of I Be's Troubled, Muddy Waters' favorite song" linkOut="https://www.loc.gov/item/afc9999005.34564/"/>
+<LOCItem type="manuscript" image="/loc/chicago/muddyWaters/lomax.jpg" captions="Notes from Alan Lomax when meeting with Muddy Waters. He notes that Muddy Waters can tune his guitar in three ways - Natural, Spanish, and E minor, his favorite song is 'I Be's Troubled', and he owns a Victrola." linkOut="https://www.loc.gov/resource/afc2004004.ms070208/?sp=18"/>
+<LOCItem type="pnp" image="/loc/chicago/muddyWaters/c.jpg" caption="Card catalog image, of I Be's Troubled, Muddy Waters' favorite song." linkOut="https://www.loc.gov/item/afc9999005.34566/"/>
 
 When the record was pressed, Muddy Waters received a couple of copies and $20 in the mail. He immediately played the record on his machine, and soon after, in 1943, he left for Memphis and then Chicago to pursue a full time music career.
 
