--- a/src/app/content/chicago/onLeong.mdx
+++ b/src/app/content/chicago/onLeong.mdx
@@ -1,5 +1,5 @@
 ---
-title: Chinatown's Ornate Meeting Place
+title: The second Chicago Chinatown.
 locationTitle: Pui Tak Center
 address: 2216 S Wentworth Ave
 location: ["Chicago"] 
@@ -17,7 +17,7 @@ stickers: [{image: "/loc/chicago/onLeong/eastElevation.png", linkOut: "https://w
 
 There have been many Chinatowns in Chicago -- since the 1870s, the Chinese community has convened and grown. The first Chinatown was in the Loop, on Clark Street between Adams and Van Buren. With rising tensions and racial discrimination in the late 1800s, especially in the West Coast, Chicago saw its Chinese population increase dramatically.
 
-<LOCItem caption="Section of the Chinese Exclusion Act" image="/loc/chicago/onLeong/exclusionAct.jpg" linkOut="https://www.loc.gov/resource/llsalvol.llsal_022/?sp=86&st=image&r=-0.094,-0.142,1.453,1.01,0"/>
+<LOCItem type="law" caption="Section of the Chinese Exclusion Act" image="/loc/chicago/onLeong/exclusionAct.jpg" linkOut="https://www.loc.gov/resource/llsalvol.llsal_022/?sp=86&st=image&r=-0.094,-0.142,1.453,1.01,0"/>
 
 However, the anti-Chinese sentiment was also felt in Chicago -- with increased incidents of harassment and unsustainable raised rents, people started wondering if the first Chinatown was unsustainable. In February 1912, a coordinated move to Cermak and Wentworth started the “New Chinatown”.  Driving this move was the On Leong Merchants Association, and their members secured around 50 10-year leases, signifying that this New Chinatown was here to stay.
 
@@ -45,7 +45,7 @@ Michaelsen and Rognstad did their research on Chinese architecture and design th
 ]}/>
 <BigLink title="Link: Historic American Buildings Survey report on Pui Tak Center" thumbnail="/loc/chicago/onLeong/cover.png" link="https://www.loc.gov/item/il0981/"/>
 
-<LOCItem caption="The Gold Dome Building in Garfield Park, another building by the Michaelsen and Rognstad firm. After the successful reception of the On Leong design, the firm was hired to do lots of other work in Chinatown, including the building across the street, the Won Kow." image="/loc/chicago/onLeong/goldDome.jpg" linkOut="https://www.loc.gov/resource/highsm.18035/?r=-0.431,0,1.862,1.294,0"/>
+<LOCItem type="pnp" caption="The Gold Dome Building in Garfield Park, another building by the Michaelsen and Rognstad firm. After the successful reception of the On Leong design, the firm was hired to do lots of other work in Chinatown, including the building across the street, the Won Kow. This photograph is from the Carol M. Highsmith Archive" image="/loc/chicago/onLeong/goldDome.jpg" linkOut="https://www.loc.gov/resource/highsm.18035/?r=-0.431,0,1.862,1.294,0"/>
 
 The On Leong Building was a huge success -- in its heyday, it served as a major community space, with after-school programs for students, new immigrant support, and lots of activities and celebrations. The idea was to be like a “gas station” -- one stop shop for everything people need on their trip to living in Chicago.
 
