--- a/src/app/content/sewy/depot.mdx
+++ b/src/app/content/sewy/depot.mdx
@@ -21,7 +21,7 @@ In 1917, a spark from one of the engines on the nearby tracks started a fire tha
 
 
 
-<LOCItem caption="newspaper report on the fire, with details of the people who escaped the fire." image="/loc/sewy/depot/newspaper.jpg" linkOut="https://www.loc.gov/resource/sn92066979/1917-10-17/ed-1/?dl=page&q=fire+depot&sp=1&st=image&r=0.187,0.025,0.667,0.468,0"/>
+<LOCItem type="newspaper" caption="newspaper report on the fire, with details of the people who escaped the fire." image="/loc/sewy/depot/newspaper.jpg" linkOut="https://www.loc.gov/resource/sn92066979/1917-10-17/ed-1/?dl=page&q=fire+depot&sp=1&st=image&r=0.187,0.025,0.667,0.468,0"/>
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"Charles Lucas, an employee of the depot, escaped with the suit he was wearing and the cash in the office.", position:{col:4, row:1}, size:{width:5, height:2}, style:{outline:"box", backgroundColor: "white"}},
     {type:"image", src:"/loc/sewy/depot/running.png", position:{col:1, row:1}, size:{width:8, height:6}},
