--- a/src/app/content/sewy/libertyBell.mdx
+++ b/src/app/content/sewy/libertyBell.mdx
@@ -1,5 +1,5 @@
 ---
-title: VVN TODO
+title: The Liberty Bell visits Cheyenne
 locationTitle: Wyoming State Museum
 address: 2301 Central Ave
 location: ["SEWY"] 
@@ -16,11 +16,11 @@ stickers: [{image: "/loc/sewy/libertyBell/poster.jpg", linkOut: "https://www.loc
 ---
 
 Here in front of the Wyoming State Museum sits something surprising - the Liberty Bell! It is one of a set of 57 replicas that was created in the 1950s as a part of movement to get people across the United States to invest into savings bonds.
-<LOCItem image="/loc/sewy/libertyBell/poster.jpg" linkOut="https://www.loc.gov/resource/ppmsca.50985/"/>
-<LOCItem image="/loc/sewy/libertyBell/buybonds.jpg" linkOut="https://www.loc.gov/resource/ppmsca.18334/"/>
+<LOCItem image="/loc/sewy/libertyBell/poster.jpg" type="pnp" linkOut="https://www.loc.gov/resource/ppmsca.50985/"/>
+<LOCItem image="/loc/sewy/libertyBell/buybonds.jpg" type="pnp" linkOut="https://www.loc.gov/resource/ppmsca.18334/"/>
 It wasn’t the first time the image of the Liberty Bell was used in a campaign. During the Great War, the country needed to raise money to support the Allied cause. The government employed celebrities at the time, such as Charlie Chaplin, to encourage people to support the cause, but it was completely ineffective. So they turned to the Liberty Bell, and created a campaign around it: ringing the bell thirteen times for each of the original thirteen colonies, and having every other bell in the nation ringing at the same time.
 
-<LOCItem image="/loc/sewy/libertyBell/john.jpg" linkOut="https://www.loc.gov/item/2014705718/"/>
+<LOCItem image="/loc/sewy/libertyBell/john.jpg" type="pnp" linkOut="https://www.loc.gov/item/2014705718/"/>
 
 With such a successful strategy, the United States invoked the bell's image again when they wanted to raise awareness for the Independence Bond Drive in May of 1950. This time, 57 full-sized replicas of the bell was forged in France. One was sent to each state, to be toured around in custom trucks, and finally arriving in each state’s respective capitol.
 
@@ -58,7 +58,7 @@ After debating the logistics of how best to transport a treasure across the coun
     {type:"text", src:"YAYYYYY", position:{col:3, row:24}, size:{width:5, height:3}, style:{outline:"none",fontSize:"3rem", color:"black"}},
 ]}/>
 
-<LOCItem caption="photograph from 1917 bond drive." image="/loc/sewy/libertyBell/libertyBell.jpg" linkOut="https://www.loc.gov/resource/ppmsca.12933/"/>
+<LOCItem caption="photograph from 1917 bond drive." type="pnp" image="/loc/sewy/libertyBell/libertyBell.jpg" linkOut="https://www.loc.gov/resource/ppmsca.12933/"/>
 
 {/* 
 Sticker template: 
