--- a/src/app/content/sewy/lightPlant.mdx
+++ b/src/app/content/sewy/lightPlant.mdx
@@ -46,7 +46,7 @@ Most parts of a city are intentionally built. Water doesn’t naturally flow to 
 
 Cheyenne embraced electricity first in 1883 by lighting up part of its downtown. Not to be outdone, Laramie tried to contact the same company to add electricity - the Brush Swan Electric Company.
 
-<LOCItem image="/loc/sewy/lightPlant/cleveland.jpg" caption="Illustration of an arc lighting tower in Cleveland, Ohio. Arc lighting was so bright that it could be used to illuminate a whole city square." linkOut="https://www.loc.gov/resource/gdcscd.00337706836/?sp=6"/>
+<LOCItem image="/loc/sewy/lightPlant/cleveland.jpg" type="book" caption="Illustration of an arc lighting tower in Cleveland, Ohio. Arc lighting was so bright that it could be used to illuminate a whole city square." linkOut="https://www.loc.gov/resource/gdcscd.00337706836/?sp=6"/>
 
 {/* <ComicSection/> */}
 
@@ -60,7 +60,7 @@ After a while, factories were allowed to use the power, including the flour mill
 
 <LOCItem  image="/loc/sewy/lightPlant/map.jpg" type="map" caption="1907 map of Laramie showing the mill next to the power plant." linkOut="https://www.loc.gov/resource/g4264lm.g097661907/?sp=3&st=image&r=-0.007,0.716,0.428,0.275,0"/>
 
-<LOCItem  image="/loc/sewy/lightPlant/whatWeHave.jpg" type="book"  caption="Excerpt from a 1908 book highlighting the benefits of living in Laramie. Apart from its electric system, Laramie had a nice, dry climate, and “a score of secret societies”." linkOut="https://www.loc.gov/resource/gdcmassbookdig.albanycountywyo00wyom/?sp=4&r=-0.007,0.2,0.623,0.401,0"/>
+<LOCItem  image="/loc/sewy/lightPlant/whatwehave.jpg" type="book"  caption="Excerpt from a 1908 book highlighting the benefits of living in Laramie. Apart from its electric system, Laramie had a nice, dry climate, and “a score of secret societies”." linkOut="https://www.loc.gov/resource/gdcmassbookdig.albanycountywyo00wyom/?sp=4&r=-0.007,0.2,0.623,0.401,0"/>
 
 Though the light plant was demolished in the 1970s, Laramie is still known as the Gem City on the Plains -- named such because of the glow it gave in the distance at night.
 
