--- a/src/app/content/sewy/lionsPark.mdx
+++ b/src/app/content/sewy/lionsPark.mdx
@@ -21,8 +21,8 @@ His eldest brother, John Jenkins, was a lawyer who later served as the state rep
 
 On his first day in Cheyenne, the brothers had dinner at Fort David Russell, as the elder John had to defend two of the officers in court. John eventually moved back to Wisconsin after his appointed ended, but James enjoyed Wyoming, and sent for his wife to move to the new state with him.
 
-<LOCItem image="/loc/sewy/lionsPark/fortDavid.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0259.sheet"/>
-<LOCItem image="/loc/sewy/lionsPark/officersQuarters.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0259.photos/?sp=1"/>
+<LOCItem image="/loc/sewy/lionsPark/fortDavid.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0259.sheet"/>
+<LOCItem image="/loc/sewy/lionsPark/officersQuarters.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0259.photos/?sp=1"/>
 
 James settled in Cheyenne. In 1878, when Jenkins planted his first tree in Cheyenne, it was a treeless prairie town. He took it upon himself to make Cheyenne a City of Trees.
 
@@ -45,7 +45,7 @@ Arbor Day was a new holiday established in Nebraska in 1874, aiming to get a gro
     {type:"image", src:"/loc/sewy/lionsPark/tree2.png", position:{col: 2, row: 4}, size:{width:5, height:3}},
     {type: "text", src:"And create a beautiful place for the next generation.", position:{col: 1, row:7}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
     {type:"image", src:"/loc/sewy/lionsPark/tree3.png", position:{col: 2, row: 7}, size:{width:5, height:3}},
-    {type: "text", src:"Arbor Day was made into a state holiday VVN TODO WHAT YEAR?.", position:{col: 4, row:9}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
+    {type: "text", src:"Arbor Day was made into a holiday in 1888.", position:{col: 4, row:9}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
 ]}/>
 
 The first Arbor Day started off with a grand parade as a tree, loaded onto a wagon with a flag tied to its top, was planted in the first park in the city at 22nd St and Central Avenue. This first park, at the time fresh and new, is now known as the Old City Park, whose site now hosts the Wyoming State Supreme Court and the Wyoming State Museum.
