--- a/src/app/content/sewy/lovejoy.mdx
+++ b/src/app/content/sewy/lovejoy.mdx
@@ -55,9 +55,9 @@ The dream of a motorized car started with people who were passionate about bicyc
 Cars eventually started becoming the mass-produced industry as they are today, and Lovejoy was still passionate about them. He worked with the National Highway Association on a road map, adding Laramie and other sights to see in Wyoming to it.
 
 
-<LOCItem image="/loc/sewy/lovejoy/map.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.wyomingautoguide00unse/?sp=20&r=-0.207,0.206,1.744,1.223,0"/>
-<LOCItem image="/loc/sewy/lovejoy/highwaymap.jpg" linkOut="https://www.loc.gov/resource/gdcwdl.wdl_11537/?r=0.186,0.217,0.377,0.264,0"/>
-<LOCItem image="/loc/sewy/lovejoy/lovejoygarage.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.wyomingautoguide00unse/?sp=37&r=-0.824,-0.093,2.647,1.856,0"/>
+<LOCItem image="/loc/sewy/lovejoy/map.jpg" type="book" linkOut="https://www.loc.gov/resource/gdcmassbookdig.wyomingautoguide00unse/?sp=20&r=-0.207,0.206,1.744,1.223,0"/>
+<LOCItem image="/loc/sewy/lovejoy/highwaymap.jpg" type="map" linkOut="https://www.loc.gov/resource/gdcwdl.wdl_11537/?r=0.186,0.217,0.377,0.264,0"/>
+<LOCItem image="/loc/sewy/lovejoy/lovejoygarage.jpg" type="book" linkOut="https://www.loc.gov/resource/gdcmassbookdig.wyomingautoguide00unse/?sp=37&r=-0.824,-0.093,2.647,1.856,0"/>
 
 And he eventually became a dealer of Franklin Motor Cars, who thought he was doing a terrible job. When they sent someone out to help him improve his marketing technique, Lovejoy took them around on a tour of the area. Pointing out the ranches where he had sold a car in between the large stretches without a human in sight, the Franklin manager left impressed that Lovejoy had sold as many vehicles as he did.
 
