--- a/src/app/content/sewy/morris.mdx
+++ b/src/app/content/sewy/morris.mdx
@@ -21,8 +21,8 @@ She was the first woman to hold public office in the United States as justice of
 
 South Pass City was the largest city along the Oregon Trail. By 1869, the year Morris arrived in South Pass City, over 400,000 people had crossed Wyoming. Mark Twain wrote about his visit to the stage station in his book “Roughing It”:
 
-<LOCItem image="/loc/sewy/morris/roughingIt.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.roughingit02twai/?sp=110&r=-0.065,0.611,1.133,0.78,0" />
-<LOCItem image="/loc/sewy/morris/spc.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0067.photos/?sp=5"/>
+<LOCItem type="book" image="/loc/sewy/morris/roughingIt.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.roughingit02twai/?sp=110&r=-0.065,0.611,1.133,0.78,0" />
+<LOCItem type="pnp" image="/loc/sewy/morris/spc.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0067.photos/?sp=5"/>
 
 It wasn’t easy being the first female judge for Morris starting from day one. Her predecessor, J. W. Stillman, refused to turn his court dockets over to a woman.
 
@@ -76,4 +76,4 @@ Even though she lost her first court case, she won in the court of public opinio
 
 Less than a year after her initial appointment, Morris’s term came to an end, and she left South Pass City. She followed her son to Laramie, and eventually settled in Cheyenne. Two nine-feet tall statues exist to celebrate her legacy -- one stands in the State Capitol in Cheyenne, and other stands in the US Capitol in Washington DC.
 
-<LOCItem image="/loc/sewy/morris/statue.jpg" caption="The National Statuary Hall in Washington DC hosts two statues to represent each state in the US Capitol. Esther is one that stands for Wyoming." linkOut="https://www.loc.gov/resource/pcrd.1a02480/"/>
+<LOCItem type="pnp" image="/loc/sewy/morris/statue.jpg" caption="The National Statuary Hall in Washington DC hosts two statues to represent each state in the US Capitol. Esther is one that stands for Wyoming." linkOut="https://www.loc.gov/resource/pcrd.1a02480/"/>
