--- a/src/app/content/chicago/palmerSquare.mdx
+++ b/src/app/content/chicago/palmerSquare.mdx
@@ -1,5 +1,5 @@
 ---
-title: Terror on Two Wheels
+title: The former bicycle capital of the United States
 locationTitle: Palmer Square Park
 address: 2200 N Kedzie Blvd
 location: ["Chicago"] 
@@ -21,7 +21,7 @@ The dream of building a bike had been around for centuries before the initial pr
 
 The first commercially successful design did have pedals, and it was also known as the Velocipede, but because of its frame and wheels that were banded with metal, it earned the name “Boneshaker”.
 
-<LOCItem image="/loc/chicago/palmerSquare/velocipede.jpg" linkOut="https://www.loc.gov/resource/rbpe.34101800/?sp=1"/>
+<LOCItem type="book" image="/loc/chicago/palmerSquare/velocipede.jpg" linkOut="https://www.loc.gov/resource/rbpe.34101800/?sp=1"/>
 
 Then came the penny-farthing, improved over the velocipede because its large front wheel allowed for higher speeds. It was called a penny-farthing because the large and small wheels resembled a penny and the smaller UK farthing coin.
 
@@ -38,11 +38,11 @@ It’s no wonder that the next iteration of the bicycle, most similar to the bik
 
 In Chicago, there were scores of small bike companies, all manufacturing in the city. Being centrally located in the country and the system set up by Sears meant it was easy to ship these custom bikes across the United States. Bike clubs were popular -- when you invested into a bike (which were costly at the time), you also joined a club to cycle with (and consequentially, invited to all sorts of social events, with costume rides, teas, polo teams...).
 
-<LOCItem caption="" image="/loc/chicago/palmerSquare/bikeClub.jpg" linkOut="https://www.loc.gov/resource/sn84025828/1897-07-17/ed-1/?sp=2&q=palmer+bicycle&r=0.136,0.558,0.658,0.457,0"/>
+<LOCItem type="newspaper" caption="Newspaper clipping from the Chicago eagle, highlight a bicycle club in 1897" image="/loc/chicago/palmerSquare/bikeClub.jpg" linkOut="https://www.loc.gov/resource/sn84025828/1897-07-17/ed-1/?sp=2&q=palmer+bicycle&r=0.136,0.558,0.658,0.457,0"/>
 
 Though Chicago made over two thirds of all bikes in the US at this time, it wasn’t an easy adoption in the city. People were concerned with the condition of the roads -- the wear of these fast-moving tires would tear them up and degrade them quickly. Pedestrians were also annoyed -- especially here in Palmer Square Park when the Chicago cycling clubs would hold races around the outer path. Called “scorchers”, it was a nationwide problem, and people were duking it out in the court system and debating whether it was moral to bike on Sundays.
 
-<LOCItem image="/loc/chicago/palmerSquare/c.jpg" linkOut="https://www.loc.gov/resource/stereo.1s46517/"/>
+<LOCItem type="pnp" caption="Stereograph of the Bicycle Club, World's Fair Dedication Parade" image="/loc/chicago/palmerSquare/c.jpg" linkOut="https://www.loc.gov/resource/stereo.1s46517/"/>
 
 {/* 
 Sticker template: 
