--- a/src/app/content/sewy/experimental.mdx
+++ b/src/app/content/sewy/experimental.mdx
@@ -23,7 +23,11 @@ To find what other plants could survive the harsh climate, the US Department of 
     {type:"image", src:"/loc/sewy/experimental/map.png", position:{col:1, row:2}, size:{width:9, height:12}},
 ]}/>
 
-The Field Station was built by workers in the Civilian Conservation Corps, which was a program established by President Franklin D. Roosevelt during the Great Depression to put unemployed men to work around the country in a range of areas, including (but definitely not limited to): 
+The Field Station was built by workers in the Civilian Conservation Corps, which was a program established by President Franklin D. Roosevelt during the Great Depression to put unemployed men to work around the country.
+
+<LOCItem image="/loc/sewy/experimental/ccc.jpg" type="pnp" linkOut="https://www.loc.gov/item/92513367/"/>
+
+The Civilian Conservation Corps worked in a range of areas, including (but definitely not limited to): 
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"Improving infrastructure", position:{col:5, row:1}, size:{width:4, height:1}, style:{outline:"box",padding:"3px", fontSize:".9rem",backgroundColor: "white"}},
@@ -43,12 +47,12 @@ The CCC was also involved in many other projects across Wyoming:
 - The CCC started fighting the fires in Campbell County that had been burning for years, caused by random lightning.
 - They also built many structures at Guernsey State Park, including the castle, latrine, museum, dock, and drinking fountains, many of which are still used by park visitors today.
 
-<LOCItem image="/loc/sewy/experimental/lgp.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0616.photos"/>
-<LOCItem image="/loc/sewy/experimental/lgp2.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0617.photos"/>
+<LOCItem image="/loc/sewy/experimental/lgp.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0616.photos"/>
+<LOCItem image="/loc/sewy/experimental/lgp2.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0617.photos"/>
 
 The buildings were designed by William Dubois, a successful Wyoming architect who has fourteen buildings on the National Register of Historic Places
 
-Another one of the Civilian Conservation Corps' lasting projec was this Field Station, and one notable project that the Field Station tackled was to find a hardy strawberry plant. After gathering 42,000 plants ranging from New Mexico to Montana, three new varieties were released: the Radiance, Ogallala, and Fort Laramie.
+Another one of the Civilian Conservation Corps' lasting project was this Field Station, and one notable project that the Field Station tackled was to find a hardy strawberry plant. After gathering 42,000 plants ranging from New Mexico to Montana, three new varieties were released: the Radiance, Ogallala, and Fort Laramie.
 
 In 1974, the focus of research shifted to focus on grasslands and things like what grazing patterns are best, a very applicable study for the area. And now, the trees and shrubs that managed to survive under minimal care are the strongest of the bunch - they thrived independently in Cheyenne’s harsh climate.
 
