--- a/src/app/content/sewy/knight.mdx
+++ b/src/app/content/sewy/knight.mdx
@@ -58,8 +58,8 @@ He established the Wyoming Science Camp in 1925, a place where students could le
 
 Eventually, the camp grew from tents to cabins, which Knight designed and built with the help of five students. To transport things to the camp, they got eleven Franklin cars, which they painted bright yellow with a dinosaur logo. Lecturers and students would come across the country to learn at the camp.
 
-<LOCItem image="/loc/sewy/knight/lodge.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=5"/>
-<LOCItem image="/loc/sewy/knight/class.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=8"/>
+<LOCItem image="/loc/sewy/knight/lodge.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=5"/>
+<LOCItem image="/loc/sewy/knight/class.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=8"/>
 <LOCItem
   type="pnp"
   caption="Classroom Building from east"
@@ -70,4 +70,4 @@ Eventually, the camp grew from tents to cabins, which Knight designed and built 
 Knight was an ardent educator - in his time, it is estimated that he taught over 13,000 students. And he was disappointed with the amount of fossils that would be extracted from Wyoming and sent out of the state -- so he acquired the Brontosaurus fossils and assembled it for the museum. After his retirement, he kept working, and taught himself metalwork to construct the lifesize T-Rex out of copper plates that sit outside the building named after him.
 
 
-<LOCItem image="/loc/sewy/knight/knightbuilding.jpg" linkOut="https://www.loc.gov/resource/highsm.32798/?r=-0.032,-0.081,1.111,0.779,0"/>
+<LOCItem image="/loc/sewy/knight/knightbuilding.jpg" type="pnp" linkOut="https://www.loc.gov/resource/highsm.32798/?r=-0.032,-0.081,1.111,0.779,0"/>
